syntax = "proto3";

package user;

option go_package = "/user";

import "google/api/annotations.proto";

service User {
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceReply) {
    option (google.api.http) = {
      get: "/balance"
    };
  }
}

message LoginRequest {
  int64 userID = 1;
}

message LoginReply {
  string token = 1;
}

message GetBalanceRequest {
}

message GetBalanceReply {
  double balance = 1;
}
